# GTFOg

./: README.md
hardware/: CHANGELOG.SchDoc  Fogget.PrjPcb  Fogget.PrjPcbStructure  GTFOg.PrjPcb  GTFOg.PrjPcbStructure  GTFOg_Rev1.0_BoM.xlsx  Main.SchDoc  PCB.PcbDoc  PCB.REP  PERIPHERALS.Harness  PERIPHERALS.SchDoc  POWER.SchDoc  SENSORS.SchDoc  USB.Harness  USB.SchDoc  nRF52832.Harness  nRF52832.SchDoc  nRF52833.SchDoc
hardware/__Previews/: Main.SchDocPreview  PERIPHERALS.SchDocPreview  POWER.SchDocPreview  SENSORS.SchDocPreview  nRF52832.SchDocPreview
software/boards/arm/gtfog/: Kconfig.board  Kconfig.defconfig  Kconfig.gtfog  board.yml  gtfog-pinctrl.dtsi  gtfog.dts  gtfog.yml  gtfog_defconfig
software/firmware/: .cmake-format.json  .gitignore  CMakeLists.txt  nrf21540dk_nrf52840.overlay  prj.conf  requirements.cmake
software/firmware/src/: CMakeLists.txt  accelerometer.cpp  ble.cpp  buttons.cpp  charger.cpp  charger_status.cpp  main.cpp  pwm.cpp  pwm_control.cpp  runtime_config.cpp  signaling.cpp  system.cpp
software/firmware/src/include/: accelerometer.hpp  buttons.hpp  charger_status.hpp  compile_time_config.hpp  error_codes.hpp  events.hpp  fan.hpp  indicator.hpp  runtime_config.hpp  signaling.hpp  status_led.hpp  status_light.hpp  strobe.hpp  strobe_light.hpp  system.hpp
software/firmware/sysbuild/: mcuboot.conf
software/fw/: CMakeLists.txt  prj.conf
software/fw/boards/arm/gtfog/: gtfog.dts
software/fw/src/: main.c
